Initial Code commit

--- a/WorkSupply.API/appsettings.json
+++ b/WorkSupply.API/appsettings.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "JwtSecurityToken": {
+    "Key": "WorkSupply-API-K832TAO932243HGQP",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000"
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "MinimumLevel": "Information"
+  },
+  "AllowedHosts": "*",
+  "Version": "0.1"
 }
