--- a/WorkSupply.API/appsettings.Development.json
+++ b/WorkSupply.API/appsettings.Development.json
@@ -1,9 +1,42 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=password;Host=localhost;Port=5432;Database=WorkSupply;Pooling=true;"
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [{
+      "Name": "Elasticsearch",
+      "Args": {
+        "nodeUris": "http://localhost:9200",
+        "indexFormat": "worksupply-logs-{0:yyyy.MM}",
+        "period": 2000,
+        "inlineFields": true,
+        "autoRegisterTemplate": true,
+        "autoRegisterTemplateVersion": "ESv6"
+      }
+    }, {
+      "Name": "Console"
+    }]
+  },
+  "MetricsOptions": {
+    "DefaultContextLabel": "WorkSupply",
+    "Enabled": true
+  },
+  "MetricsWebTrackingOptions": {
+    "ApdexTrackingEnabled": true,
+    "ApdexTSeconds": 0.1,
+    "IgnoredHttpStatusCodes": [],
+    "IgnoredRoutesRegexPatterns": [],
+    "OAuth2TrackingEnabled": true
+  },
+  "MetricEndpointsOptions": {
+    "MetricsEndpointEnabled": true,
+    "MetricsTextEndpointEnabled": true,
+    "EnvironmentInfoEndpointEnabled": true
+  },
+  "HealthEndpointsOptions": {
+    "HealthEndpointEnabled": true,
+    "PingEndpointEnabled": true,
+    "Timeout": "0:0:10"
   }
 }
