Initial app commit

--- a/WorkSupply.API/appsettings.Development.json
+++ b/WorkSupply.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "JwtSecurityToken": {
+    "Key": "WorkSupply-API-K832TAO932243HGQP",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=password;Host=localhost;Port=5432;Database=WorkSupply;Pooling=true;"
   },
@@ -9,7 +14,7 @@
       "Args": {
         "nodeUris": "http://localhost:9200",
         "indexFormat": "worksupply-logs-{0:yyyy.MM}",
-        "period": 2000,
+        "period": 10,
         "inlineFields": true,
         "autoRegisterTemplate": true,
         "autoRegisterTemplateVersion": "ESv6"
