--- a/WorkSupply.API/appsettings.json
+++ b/WorkSupply.API/appsettings.json
@@ -1,12 +1,49 @@
 {
   "JwtSecurityToken": {
     "Key": "WorkSupply-API-K832TAO932243HGQP",
-    "Issuer": "http://localhost:5000",
-    "Audience": "http://localhost:5000"
+    "Issuer": "http://worksupply:5000",
+    "Audience": "http://worksupply:5000"
   },
-  "Serilog": {
-    "MinimumLevel": "Information"
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=password;Host=db;Port=5432;Database=WorkSupply;Pooling=true;"
   },
   "AllowedHosts": "*",
-  "Version": "0.1"
+  "Version": "0.1",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [{
+      "Name": "Elasticsearch",
+      "Args": {
+        "nodeUris": "http://elasticsearch:9200",
+        "indexFormat": "worksupply-logs-{0:yyyy.MM}",
+        "period": 10,
+        "inlineFields": true,
+        "autoRegisterTemplate": true,
+        "autoRegisterTemplateVersion": "ESv6"
+      }
+    }, {
+      "Name": "Console"
+    }]
+  },
+  "MetricsOptions": {
+    "DefaultContextLabel": "WorkSupply",
+    "Enabled": true
+  },
+  "MetricsWebTrackingOptions": {
+    "ApdexTrackingEnabled": true,
+    "ApdexTSeconds": 0.1,
+    "IgnoredHttpStatusCodes": [],
+    "IgnoredRoutesRegexPatterns": [],
+    "OAuth2TrackingEnabled": true
+  },
+  "MetricEndpointsOptions": {
+    "MetricsEndpointEnabled": true,
+    "MetricsTextEndpointEnabled": true,
+    "EnvironmentInfoEndpointEnabled": true
+  },
+  "HealthEndpointsOptions": {
+    "HealthEndpointEnabled": true,
+    "PingEndpointEnabled": true,
+    "Timeout": "0:0:10"
+  }
 }
